etc/ip6tables.rules
*filter
:INPUT - [0:0]
:SECURITY - [0:0]
:OUTPUT - [0:0]
:FORWARD - [0:0]

-A INPUT -j ACCEPT -i lo
-A INPUT -j DROP -m rt --rt-type 0
-A INPUT -j DROP -m conntrack --ctstate INVALID
-A INPUT -j ACCEPT -m conntrack --ctstate ESTABLISHED,RELATED
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type   1 -m comment --comment destination-unreachable
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type   2 -m comment --comment packet-too-big
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type   3 -m comment --comment time-exceeded
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type   4 -m comment --comment parameter-problem
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 128 -m comment --comment echo-request
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 129 -m comment --comment echo-reply
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 130 -m comment --comment multicast-listener-query  -m addrtype --dst-type multicast
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 131 -m comment --comment multicast-listener-report -m addrtype --dst-type multicast
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 132 -m comment --comment multicast-listener-done   -m addrtype --dst-type multicast
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 133 -m comment --comment router-solicitation    -m hl --hl-eq 255
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 134 -m comment --comment router-advertisement   -m hl --hl-eq 255
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 135 -m comment --comment neighbor-solicitation  -m hl --hl-eq 255
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 136 -m comment --comment neighbor-advertisement -m hl --hl-eq 255
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 141 -m comment --comment inverse-neighbor-discovery-solicitation-message  -m hl --hl-eq 255
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 142 -m comment --comment inverse-neighbor-discovery-advertisement-message -m hl --hl-eq 255
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 143 -m comment --comment multicast-listener-discovery -m addrtype --dst-type multicast
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 144 -m comment --comment home-agent-address-discovery-request-message
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 145 -m comment --comment home-agent-address-discovery-reply-message
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 146 -m comment --comment mobile-prefix-solicitation
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 147 -m comment --comment mobile-prefix-advertisement
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 148 -m comment --comment certification-path-solicitation  -m hl --hl-eq 255
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 149 -m comment --comment certification-path-advertisement -m hl --hl-eq 255
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 151 -m comment --comment multicast-router-advertisement -s fe80::/10 -m hl --hl-eq 1
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 152 -m comment --comment multicast-ruter-solicitation -s fe80::/10 -m hl --hl-eq 1
-A INPUT -j ACCEPT -p icmpv6 --icmpv6-type 153 -m comment --comment multicast-router-termination -s fe80::/10 -m hl --hl-eq 1
-A INPUT -j ACCEPT -p udp -s fe80::/10 --sport 547 -d fe80::/10 --dport 546 -m comment --comment dhcp
-A INPUT -j ACCEPT -p udp -d ff02::f  --dport 1900 -m comment --comment multicast-upnp
-A INPUT -j ACCEPT -p udp -d ff02::fb --dport 5353 -m comment --comment mdns
-A INPUT -j REJECT --reject-with icmp6-port-unreachable

-A OUTPUT -j ACCEPT -o lo
-A OUTPUT -j DROP -m rt --rt-type 0
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -j ACCEPT

-A FORWARD -m rt --rt-type 0 -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j ACCEPT -p icmpv6 --icmpv6-type 1   -m comment --comment destination-unreachable
-A FORWARD -j ACCEPT -p icmpv6 --icmpv6-type 2   -m comment --comment packet-too-big
-A FORWARD -j ACCEPT -p icmpv6 --icmpv6-type 3   -m comment --comment time-exceeded
-A FORWARD -j ACCEPT -p icmpv6 --icmpv6-type 4   -m comment --comment parameter-problem
-A FORWARD -j ACCEPT -p icmpv6 --icmpv6-type 128 -m comment --comment echo-request
-A FORWARD -j ACCEPT -p icmpv6 --icmpv6-type 129 -m comment --comment echo-reply
-A FORWARD -j REJECT --reject-with icmp6-adm-prohibited
COMMIT
